fix: adjust styles for improved layout and readability; update intro content

--- a/docs/css/intro.css
+++ b/docs/css/intro.css
@@ -204,7 +204,7 @@ header .bars::before {
   position: relative;
   top: 0;
   left: 0;
-  gap: var(--space-xl);
+  gap: var(--space-m);
   padding: var(--space-xxs) var(--space-m);
   width: 100%;
   height: 4rem;
@@ -236,8 +236,8 @@ header .bars::before {
   font-family: "Turret Road", sans-serif;
   font-weight: var(--font-turret-road-light);
   font-size: var(--step-0);
-  letter-spacing: 3px;
-  margin: var(--space-xxs) 0 0 0;
+  letter-spacing: 1px;
+  margin: 0;
 }
 
 .nav-links li img {
@@ -315,41 +315,38 @@ h3 {
 
 .intro-content a span {
   font-weight: var(--font-turret-road-bold);
-  font-size: var(--step-4);
+  font-size: var(--step-3);
   color: hsl(var(--clr-span));
-  margin-block: var(--space-xs);
 }
 
 .wrapper-gradient-text {
-  font-family: "Big Shoulders Inline", sans-serif;
-  font-weight: var(--font-big-shoulders-inline-light);
-  font-size: var(--step-4);
-  line-height: 1;
+  font-family: "Turret Road", sans-serif;
+  font-weight: var(--font-turret-road-light);
+  font-size: var(--step-1);
   text-align: center;
   text-shadow: 0px 0px 0px rgb(255, 255, 255);
-  margin-bottom: var(--space-xs);
 }
 
 .text-layer {
   transform-style: preserve-3d;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.2s ease-in-out;
   background: linear-gradient(
-    -100deg,
-    rgb(105, 142, 163),
+    0deg,
+    rgb(213, 223, 230),
     rgb(78, 115, 136),
     rgba(65, 90, 105, 0.6),
     rgba(142, 186, 211, 0.1)
   );
-  background-size: 200% 200%;
+  background-size: 100% 100%;
   background-position: 0% 0%;
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
   animation: shadowDrip 3s infinite alternate ease-in-out;
-  margin-bottom: 0em;
+
   padding: 0;
   text-shadow: 0px 15px 0px rgba(255, 255, 255, 0.853);
-  transition: filter 0.4s ease-in-out;
+  transition: filter 0.5s ease-in-out;
   will-change: filter;
   z-index: 1;
   text-align: center;
@@ -360,8 +357,9 @@ h3 {
     text-shadow: 0px 0px 0px rgba(255, 255, 255, 0.853);
   }
   100% {
-    text-shadow: 0px 10px 20px rgb(255, 255, 255),
-      0px 30px 40px rgb(255, 255, 255), 0px 70px 5px rgb(232, 235, 238);
+    text-shadow: 0px 5px 10px rgb(255, 255, 255),
+      /* Reduced vertical offset */ 0px 15px 20px rgb(255, 255, 255),
+      /* Reduced vertical offset */ 0px 25px 5px rgb(232, 235, 238); /* Reduced vertical offset */
   }
 }
 
